# ca8210-posix-thread

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Readme.md  basic_6lowpan_remote.sh  build_buildtools.sh  build_nuc970.sh  fix_permissions.sh  lazymake.sh  libscript.mri  makefile  prepare_openthread.sh  python_client.py  python_server.py  update_openthread.sh  update_submodules.sh
app/: PacketDissector.py  cliapp  main.c  makefile
cascoda/: makefile
cascoda/include/: cascoda_api.h
cascoda/source/: cascoda_api.c  kernel_exchange.c
example/: PacketDissector.py  cliapp  main.c  mainMultithread.c  makefile  run_drivers.sh
platform/: alarm.c  flash.c  flash.h  logging.c  makefile  misc.c  platform.c  platform.h  posix-platform.c  posix-platform.h  radio-stubs.c  radio.c  radio_stubs.c  random.c  selfpipe.c  selfpipe.h  serial.c  settings.c  spi-stubs.c
platform/include/ca8210-posix-thread/: ca821x-openthread-config.h.in  posix-platform.h
